--- a/packages/admin/src/style/global.less
+++ b/packages/admin/src/style/global.less
@@ -13,3 +13,12 @@ ol {
 :root {
   --primary-color: #52c41a;
 }
+
+a {
+  font-size: 12px;
+  cursor: pointer;
+  color: #1999fc;
+  &:hover {
+    color: #56b6ff;
+  }
+}
