--- a/packages/ui-kit/src/editor/MarkdownEditor/index.less
+++ b/packages/ui-kit/src/editor/MarkdownEditor/index.less
@@ -1,5 +1,8 @@
-.editor-component {
+@import '../style/var.less';
+
+.@{prefixCls}-markdown-editor {
   @import url('./md.theme.less');
+
   .bytemd {
     height: 600px;
   }
