--- a/packages/api/templates/base/http-clients/axios-http-client.ejs
+++ b/packages/api/templates/base/http-clients/axios-http-client.ejs
@@ -5,6 +5,8 @@ const { apiConfig, generateResponses, config } = it;
 import type { AxiosInstance, AxiosRequestConfig, HeadersDefaults, ResponseType, AxiosResponse } from "axios";
 import axios from "axios";
 
+export { axios } 
+
 export type QueryParamsType = Record<string | number, any>;
 
 export interface FullRequestParams extends Omit<AxiosRequestConfig, "data" | "params" | "url" | "responseType"> {
@@ -45,7 +47,7 @@ export class HttpClient<SecurityDataType = unknown> {
     private format?: ResponseType;
 
     constructor({ securityWorker, secure, format, ...axiosConfig }: ApiConfig<SecurityDataType> = {}) {
-        this.instance = axios.create({ ...axiosConfig, baseURL: axiosConfig.baseURL || "<%~ apiConfig.baseUrl %>" })
+        this.instance = axios.create({ ...axiosConfig, baseURL: axiosConfig.baseURL || axios.defaults.baseURL || "<%~ apiConfig.baseUrl %>" })
         this.secure = secure;
         this.format = format;
         this.securityWorker = securityWorker;
