--- a/packages/ui-kit/src/editor/MarkdownEditor/index.less
+++ b/packages/ui-kit/src/editor/MarkdownEditor/index.less
@@ -1,4 +1,5 @@
 @import '../../style/var.less';
+@import url('~bytemd/dist/index.min.css');
 
 .@{prefixCls}-markdown-editor {
   @import url('./md.theme.less');
