--- a/packages/ui-kit/src/icon/index.less
+++ b/packages/ui-kit/src/icon/index.less
@@ -3,7 +3,7 @@
 .@{prefixCls}-icon {
   width: 1em;
   height: 1em;
-  vertical-align: -0.15em !important;
-  fill: currentcolor !important;
-  overflow: hidden !important;
+  vertical-align: middle;
+  fill: currentcolor;
+  overflow: hidden;
 }
