--- a/packages/ui-kit/src/editor/components/MarkdownEditor/index.less
+++ b/packages/ui-kit/src/editor/components/MarkdownEditor/index.less
@@ -1,4 +1,4 @@
-@import '../../style/var.less';
+@import '../../../style/var.less';
 @import url('~bytemd/dist/index.min.css');
 
 .@{prefixCls}-markdown-editor {
